Connectors now align to bottom of module (solved with switching to flexbox)
Solves #58

--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
 	font-family: Helvetica, Arial, sans-serif;
 	color: #fefefe;
